[project]
name = "potatastic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
requires-python = ">=3.13"
keywords = ["pota", "meshtastic", "mqtt"]
dependencies = [
    "aiomqtt>=2.4.0",
    "anyio>=4.9.0",
    "asphalt>=4.12.0",
    "meshage>=0.1.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "refurb>=2.1.0",
]
